[tool.poetry]
name = "nlp-classification"
version = "0.1.0"
description = ""
authors = ["michaelrogers <michael.rogers@ly.st>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
datarobot = "2.27.1"
pandas = "1.3.0"
scikit-learn = "^1.0.2"
altair = "^4.2.0"
ipykernel = "^6.9.1"
rich = "^11.2.0"
tabulate = "^0.8.9"
colour = "^0.1.5"
matplotlib = "^3.5.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
